2/3 done. we have computer player

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="how_to_play">How to Play</string>
     <string name="back">back</string>
     <string name="restart">restart</string>
+    <string name="local">Local</string>
+    <string name="computer">Computer</string>
+    <string name="exit">Exit</string>
 </resources>
